Project

General

Profile

Actions

Bug #43908

closed

mds: FAILED ceph_assert(!p.is_remote_wrlock())

Added by Patrick Donnelly over 4 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Q/A
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

e/15.0.0-9777-gd5c5d76/rpm/el8/BUILD/ceph-15.0.0-9777-gd5c5d76/src/mds/Locker.cc: In function 'bool Locker::acquire_locks(MDRequestRef&, MutationImpl::LockOpVec&, CInode*, bool)' thread 7f0298952700 time 2020-01-25T19:43:01.788880+0000
2020-01-25T19:43:01.790 INFO:tasks.ceph.mds.c.smithi026.stderr:/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/huge/release/15.0.0-9777-gd5c5d76/rpm/el8/BUILD/ceph-15.0.0-9777-gd5c5d76/src/mds/Locker.cc: 544: FAILED ceph_assert(!p.is_remote_wrlock())
2020-01-25T19:43:01.791 INFO:tasks.ceph.mds.c.smithi026.stderr: ceph version 15.0.0-9777-gd5c5d76 (d5c5d76bcc015abe4da79936cd40dc5d2b6c5710) octopus (dev)
2020-01-25T19:43:01.791 INFO:tasks.ceph.mds.c.smithi026.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x156) [0x7f02a02991e4]
2020-01-25T19:43:01.791 INFO:tasks.ceph.mds.c.smithi026.stderr: 2: (()+0x27b3fe) [0x7f02a02993fe]
2020-01-25T19:43:01.791 INFO:tasks.ceph.mds.c.smithi026.stderr: 3: (Locker::acquire_locks(boost::intrusive_ptr<MDRequestImpl>&, MutationImpl::LockOpVec&, CInode*, bool)+0x30af) [0x563c9cb8fbcf]
2020-01-25T19:43:01.791 INFO:tasks.ceph.mds.c.smithi026.stderr: 4: (Server::rdlock_two_paths_xlock_destdn(boost::intrusive_ptr<MDRequestImpl>&, bool)+0x9d5) [0x563c9ca27225]
2020-01-25T19:43:01.791 INFO:tasks.ceph.mds.c.smithi026.stderr: 5: (Server::handle_client_rename(boost::intrusive_ptr<MDRequestImpl>&)+0x206) [0x563c9ca4bc66]
2020-01-25T19:43:01.792 INFO:tasks.ceph.mds.c.smithi026.stderr: 6: (Server::dispatch_client_request(boost::intrusive_ptr<MDRequestImpl>&)+0xf17) [0x563c9ca5ba47]
2020-01-25T19:43:01.792 INFO:tasks.ceph.mds.c.smithi026.stderr: 7: (MDCache::dispatch_request(boost::intrusive_ptr<MDRequestImpl>&)+0x33) [0x563c9caf0493]
2020-01-25T19:43:01.792 INFO:tasks.ceph.mds.c.smithi026.stderr: 8: (Server::handle_slave_request_reply(boost::intrusive_ptr<MMDSSlaveRequest const> const&)+0xdd9) [0x563c9ca671c9]
2020-01-25T19:43:01.792 INFO:tasks.ceph.mds.c.smithi026.stderr: 9: (Server::handle_slave_request(boost::intrusive_ptr<MMDSSlaveRequest const> const&)+0x957) [0x563c9ca68037]
2020-01-25T19:43:01.792 INFO:tasks.ceph.mds.c.smithi026.stderr: 10: (Server::dispatch(boost::intrusive_ptr<Message const> const&)+0x83) [0x563c9ca68983]   
2020-01-25T19:43:01.792 INFO:tasks.ceph.mds.c.smithi026.stderr: 11: (MDSRank::handle_deferrable_message(boost::intrusive_ptr<Message const> const&)+0xa94) [0x563c9c9d6f64]
2020-01-25T19:43:01.792 INFO:tasks.ceph.mds.c.smithi026.stderr: 12: (MDSRank::_dispatch(boost::intrusive_ptr<Message const> const&, bool)+0x80b) [0x563c9c9d95db]
2020-01-25T19:43:01.792 INFO:tasks.ceph.mds.c.smithi026.stderr: 13: (MDSRankDispatcher::ms_dispatch(boost::intrusive_ptr<Message const> const&)+0x47) [0x563c9c9d9b47]
2020-01-25T19:43:01.793 INFO:tasks.ceph.mds.c.smithi026.stderr: 14: (MDSDaemon::ms_dispatch2(boost::intrusive_ptr<Message> const&)+0x128) [0x563c9c9c6c28]
2020-01-25T19:43:01.793 INFO:tasks.ceph.mds.c.smithi026.stderr: 15: (DispatchQueue::entry()+0x126a) [0x7f02a04b2a0a]
2020-01-25T19:43:01.793 INFO:tasks.ceph.mds.c.smithi026.stderr: 16: (DispatchQueue::DispatchThread::entry()+0x11) [0x7f02a0556d81]
2020-01-25T19:43:01.793 INFO:tasks.ceph.mds.c.smithi026.stderr: 17: (()+0x82de) [0x7f029f0c32de]
2020-01-25T19:43:01.793 INFO:tasks.ceph.mds.c.smithi026.stderr: 18: (clone()+0x43) [0x7f029dc56133]
2020-01-25T19:43:01.793 INFO:tasks.ceph.mds.c.smithi026.stderr:*** Caught signal (Aborted) **

From: /ceph/teuthology-archive/pdonnell-2020-01-25_00:13:49-multimds-wip-pdonnell-testing-20200124.211519-distro-basic-smithi/4703684/teuthology.log

See also: ['4703684', '4703716', '4704180', '4704036', '4703812']

Might be caused by https://github.com/ceph/ceph/pull/32816 or one of the other async dirop PRs

Actions #1

Updated by Zheng Yan over 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 33005

Nothing do with async dirops PR

Actions #2

Updated by Zheng Yan about 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF