mds: fix 'can wrlock' check in Locker::acquire_locks()

the check does not match check in Locker::wrlock_start()

Fixes: https://tracker.ceph.com/issues/43908
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>